# client_service_srv_hw3

py_srvcli/: package.xml  setup.py
py_srvcli/py_srvcli/: string_validation_service.py  validation_client.py
string_validation_interfaces/: CMakeLists.txt  package.xml
string_validation_interfaces/srv/: Str.srv
